# scribe

./: CMakeLists.txt  scribe.py
debian/: README.Debian  README.source  changelog  control  copyright  debhelper.mk  rules
debian/patches/: hifi_01_install_to_bin.diff  series
src/: main.cpp
